--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install .[tests]
 
 script:
-  - py.test -v test_pyout.py
+  - py.test --doctest-modules -v pyout.py test_pyout.py
 
 notifications:
   email:
