TST: Hook up "python setup.py test" to pytest
It's nice that 'python setup.py test' works.  Also, it has the minor
perk of being able to say 'coverage run setup.py test' rather than
something like 'coverage run $(which pytest)'.

Note that the setup.py test command will work without running any
install commands because it pulls in tests_requires, but this doesn't
include jsonschema, so there is no validation in this case.

Based on https://docs.pytest.org/en/latest/goodpractices.html

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist = py27, py35
 
 [testenv]
-commands = py.test
+commands = python setup.py test
 deps =
      pytest
      mock
+     jsonschema
