--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,12 @@
 envlist = py27, py35
 
 [testenv]
-commands = python setup.py test
+commands =
+     coverage run setup.py test
+     coverage report -m
+
 deps =
+     coverage
      pytest
      mock
      jsonschema
