appveyor: Disable coverage submission
As also observed on DataLad's side, coverage submission on AppVeyor
has started failing regularly [0].  Disable it until someone
investigates and figures out what is going on.

[0] Two examples:
    https://ci.appveyor.com/project/kyleam/pyout/builds/34475825
    https://ci.appveyor.com/project/kyleam/pyout/builds/34476006

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,10 @@ install:
 test_script:
   - coverage run -m pytest --doctest-ignore-import-errors -rs && coverage xml
 
-after_test:
-  - ps: |
-      $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
-      Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
-      bash codecov.sh -f "coverage.xml"
+# Disabled because coverage submission has started failing regularly.
+#
+# after_test:
+#   - ps: |
+#       $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
+#       Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
+#       bash codecov.sh -f "coverage.xml"
