--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,19 @@
 [tox]
-envlist = py37
+envlist = py3
 
 [testenv]
 commands =
-     coverage run setup.py test
+     coverage erase
+     coverage run -m pytest {posargs} pyout
      coverage report -m
 
 deps =
      coverage
      pytest
+     pytest-timeout
+
+[pytest]
+addopts = --doctest-modules
+
+[coverage:run]
+source = pyout
