--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,17 +21,16 @@ jobs:
           - '3.10'
           - '3.11'
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python }}
     - name: Install dependencies
       run: |
         pip install -U pip
-        pip install codecov
-        pip install .[full]
+        pip install codecov coverage tox
     - name: Run tests
-      run: coverage run setup.py test && coverage xml
+      run: tox -e py && coverage xml
     - name: Upload coverage to codecov
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
