--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,9 +19,9 @@ init:
 install:
   - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
   - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
+  - appveyor-retry conda update -q conda
   - conda info -a
-  - "conda create -q -n test-environment python=%PYTHON_VERSION%"
+  - "appveyor-retry conda create -q -n test-environment python=%PYTHON_VERSION%"
   - activate test-environment
   - python -c "import sys; print(sys.path)"
   - pip install codecov pytest pytest-timeout
