Set overall timeout to be 120 sec for pytest invocation
In #144 (caching) we got runs for older pythons time out waiting for 6
hours.  This is added in hopes to avoid waiting for that long.

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
      pytest-timeout
 
 [pytest]
-addopts = --doctest-modules
+addopts = --doctest-modules --timeout=120
 
 [coverage:run]
 source = pyout
