--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,15 @@ envlist = py3
 
 [testenv]
 commands =
-     coverage erase
-     coverage run -m pytest {posargs} pyout
-     coverage report -m
+    coverage erase
+    PYTEST_DEBUG=1 python -m pytest -s -v --cov=pyout {posargs} pyout
+    coverage combine
+    coverage report -m
 
 deps =
      coverage
      pytest
+     pytest-cov
      pytest-timeout
 
 [pytest]
