Properly set env var and do not bother cleaning/combining reports

--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,10 @@
 envlist = py3
 
 [testenv]
+setenv =
+    PYTEST_DEBUG = 1
 commands =
-    coverage erase
-    PYTEST_DEBUG=1 python -m pytest -s -v --cov=pyout {posargs} pyout
-    coverage combine
-    coverage report -m
-
+    python -m pytest -s -v --cov=pyout {posargs} pyout
 deps =
      coverage
      pytest
