--- a/.autorc
+++ b/.autorc
@@ -8,9 +8,9 @@
         [
             "exec",
             {
-                "afterChangelog": "bump2version \"$(printf '%s\n' \"$ARG_0\" | jq -r .bump)\"",
                 "afterRelease": "python -m build && twine upload dist/*"
             }
-        ]
+        ],
+        "released"
     ]
 }
