--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,8 @@ jobs:
 
       - name: Download auto
         run: |
-          #curl -vL -o - "$(curl -fsSL https://api.github.com/repos/intuit/auto/releases/latest | jq -r '.assets[] | select(.name == "auto-linux.gz") | .browser_download_url')" | gunzip > ~/auto
-          # Pin to 10.16.1 so we don't break if & when
-          # <https://github.com/intuit/auto/issues/1778> is fixed.
-          wget -O- https://github.com/intuit/auto/releases/download/v10.16.1/auto-linux.gz | gunzip > ~/auto
+
+          wget -O- https://github.com/intuit/auto/releases/download/v11.3.0/auto-linux.gz | gunzip > ~/auto
           chmod a+x ~/auto
 
       - name: Set up Python
@@ -40,7 +38,7 @@ jobs:
           python-version: '^3.11'
 
       - name: Install Python dependencies
-        run: python -m pip install build bump2version twine
+        run: python -m pip install build twine
 
       - name: Create release
         run: ~/auto shipit
