--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "tomli", "wheel"]
+requires = ["setuptools", "versioneer[toml]"]
 build-backend = 'setuptools.build_meta'
 
 [tool.versioneer]
