Add type checking tox test

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py3
+envlist = typing, py3
 
 [testenv]
 commands =
@@ -11,6 +11,14 @@ deps =
      coverage
      pytest
      pytest-timeout
+
+[testenv:typing]
+deps =
+    mypy
+    {[testenv]deps}
+    types-jsonschema
+commands =
+    mypy pyout
 
 [pytest]
 addopts = --doctest-modules --timeout=120
