--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,10 @@ jobs:
           - '3.11'
           - '3.12'
           - '3.13'
+        include:
+          - python-version: '3.9'
+            toxenv: typing
+            os: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python }}
