Enable mypy strict to show the scope of remaining work

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
     {[testenv]deps}
     types-jsonschema
 commands =
-    mypy pyout
+    mypy --strict pyout
 
 [pytest]
 addopts = --doctest-modules --timeout=120
